# readerwriterqueue

./: CMakeLists.txt  Config.cmake.in  conanfile.py
debian/: changelog  control  copyright  rules
